# gbif_registrar

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment-min.yml  environment.yml  implementation.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  implementation.md  make.bat  requirements.txt
src/gbif_registrar/: __init__.py  _utilities.py  authenticate.py  config.py  configure.py  crawl.py  register.py  upload.py  utilities.py  validate.py
tests/: conftest.py  registrations.csv  test__utilities.py  test_authenticate.py  test_config.json  test_configure.py  test_crawl.py  test_gbif_registrar.py  test_register.py  test_upload.py  test_utilities.py  test_validate.py
