[tool.poetry]
name = "gbif_registrar"
version = "0.1.1"
description = "For registering EDI data packages with GBIF"
authors = [
    "Colin Smith <colin.smith@wisc.edu>",
    "Margaret O'Brien <mobrien@ucsb.edu>"
]
maintainers = ["Colin Smith <colin.smith@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=1.5.2"
pylint = ">=2.15.8"
black = ">=22.10.0"
sphinx-rtd-theme = ">=1.1.1"
sphinx-autoapi = ">=2.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = ">=7.32.2"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
myst-nb = ">=0.17.1"
sphinx-autoapi = ">=2.0.0"
sphinx-rtd-theme = ">=1.1.1"
pylint = ">=2.15.8"
black = ">=22.10.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
