[tool.poetry]
name = "gbif_registrar"
version = "1.0.0"
description = "For registering EDI data packages with GBIF"
authors = [
    "Colin Smith <colin.smith@wisc.edu>",
    "Margaret O'Brien <mobrien@ucsb.edu>"
]
maintainers = ["Colin Smith <colin.smith@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
lxml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.0.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
myst-parser = "^3.0.0"
pylint = "^3.3.0"
black = "^26.0.0"
sphinx-rtd-theme = "^3.0.0"
sphinx-autoapi = "^3.3.0"
pytest-mock = "^3.14.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"] # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[tool.pylint.'MESSAGES CONTROL']
disable = "c-extension-no-member, protected-access, too-many-arguments"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
